# ChangeLog for dev-perl/Algorithm-Dependency
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Algorithm-Dependency/ChangeLog,v 1.33 2009/03/13 12:23:05 tove Exp $

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -Algorithm-Dependency-1.102.ebuild, -Algorithm-Dependency-1.106.ebuild:
  Cleanup

*Algorithm-Dependency-1.108 (12 Feb 2009)

  12 Feb 2009; Torsten Veller <tove@gentoo.org>
  +Algorithm-Dependency-1.108.ebuild:
  Version bump

*Algorithm-Dependency-1.107 (10 Feb 2009)

  10 Feb 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  +Algorithm-Dependency-1.107.ebuild:
  Version bump

*Algorithm-Dependency-1.106 (06 Sep 2008)

  06 Sep 2008; Torsten Veller <tove@gentoo.org>
  +Algorithm-Dependency-1.106.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  Algorithm-Dependency-1.103.ebuild:
  Stable for HPPA too.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  Algorithm-Dependency-1.103.ebuild:
  ppc. stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  Algorithm-Dependency-1.103.ebuild:
  amd64 stable

  06 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  Algorithm-Dependency-1.103.ebuild:
  alpha/ia64/sparc/x86 stable

  05 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  -Algorithm-Dependency-1.101.ebuild:
  Cleaning out unused ebuild(s)

*Algorithm-Dependency-1.103 (29 Jun 2007)

  29 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Algorithm-Dependency-1.103.ebuild:
  Version bump

  04 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  Algorithm-Dependency-1.102.ebuild:
  Stable on x86, bug #169152.

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Algorithm-Dependency-1.101.ebuild, Algorithm-Dependency-1.102.ebuild:
  Ebuild maintenance

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  Algorithm-Dependency-1.102.ebuild:
  ppc stable

  17 Aug 2006; Thomas Cort <tcort@gentoo.org>
  Algorithm-Dependency-1.102.ebuild:
  Stable on alpha.
