@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Algorithm-Dependency
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Algorithm-Dependency/ChangeLog,v 1.33 2009/03/13 12:23:05 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Algorithm-Dependency/ChangeLog,v 1.34 2009/04/14 18:03:54 tove Exp $
+
+*Algorithm-Dependency-1.110 (14 Apr 2009)
+
+  14 Apr 2009; Torsten Veller <tove@gentoo.org>
+  +Algorithm-Dependency-1.110.ebuild:
+  Version bump
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org>
   -Algorithm-Dependency-1.102.ebuild, -Algorithm-Dependency-1.106.ebuild:
